--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li><a href="#chukou">日本和牛 輸出</a></li>
             <li><a href="#chanpin">業務内容</a></li>
             <li><a href="#wuliu">食品輸出物流</a></li>
-            <li><a href="#fankui">顧客評価</a></li>
+            <li><a href="#fankui">お客様からのフィードバック</a></li>
             <li><a href="#lianxi">お問い合わせ</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -157,8 +157,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>為什麼</h2>
-        <p>三川貿易的特長</p>
+        <h2>理由</h2>
+        <p>三川貿易を選ぶ理由</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -590,7 +590,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>フィードバック</h2>
-        <p>顧客評価</p>
+        <p>お客様からのフィードバック</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -763,8 +763,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>聯系</h2>
-        <p>聯絡我們</p>
+        <h2>連絡先</h2>
+        <p>お問い合わせ</p>
       </div><!-- End Section Title -->
 
       <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
@@ -799,7 +799,7 @@
             <li><a href="#heniu">世界に誇る和牛     </a></li>
             <li><a href="#chukou">和牛の認定書</a></li>
             <li><a href="#chanpin">食品輸出</a></li>
-            <li><a href="#fankui">顧客評価</a></li>
+            <li><a href="#fankui">お客様からのフィードバック</a></li>
           </ul>
         </div>
 
