--- a/index-English.html
+++ b/index-English.html
@@ -53,7 +53,7 @@
           <ul>
             <li>English</li>
             <li><a href="./index-chinese.html">繁體中文</a></li>
-            <li><a href="./index-Japanese.html">日本語</a></li>
+            <li><a href="./index.html">日本語</a></li>
           </ul>
         </div>
       </div>
