--- a/index-chinese.html
+++ b/index-chinese.html
@@ -53,7 +53,7 @@
           <ul>
             <li><a href="./index-english.html">English</a></li>
             <li>繁體中文</li>
-            <li><a href="./index-Japanese.html">日本語</a></li>
+            <li><a href="./index.html">日本語</a></li>
           </ul>
         </div>
       </div>
