--- a/index-chinese.html
+++ b/index-chinese.html
@@ -47,7 +47,7 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-envelope d-flex align-items-center"><a
               href="mailto:contact@example.com">sansenjapan@gmail.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>81）090-9170-7213</span></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><span>(81)90-91707213</span></i>
         </div>
         <div class="languages d-none d-md-flex align-items-center">
           <ul>
@@ -795,6 +795,15 @@
             <li><a href="https://www.id.nlbc.go.jp/top.html?pc">牛個体識別番号</a></li>
             <li><a href="https://www.maff.go.jp/j/chikusan/shokuniku/pdf/full_chinese_1.pdf">和牛Guide Book(CH)</a></li>
             <li><a href="https://www.jamti.jp/pdf/tech06-12.pdf">牛肉輸出可能施設一覧</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>語言</h4>
+          <ul>
+            <li><a href="./index-english.html">English</a></li>
+            <li><a href="./index-chinese.html">繁體中文</a></li>
+            <li><a href="./index.html">日本語 </a></li>
           </ul>
         </div>
 
